<resources>
    <string name="app_name">SDcard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="action_newPro">创建新项目</string>
    <string name="action_about">关于</string>
    <string name="action_search">搜索</string>
    <string name="action_sort">排序</string>
    <string name="sort_by_adc">按字母排序</string>
    <string name="sort_by_directory">文件夹优先</string>
    <string name="sort_by_size">从大到小</string>
    <string name="sort_by_desc">从小到大</string>
    <string name="sort_by_last_modify">最后修改</string>
    <string name="action_copy">复制</string>
    <string name="action_cut">剪切</string>
    <string name="action_rename">重命名</string>
    <string name="action_open_with">打开为</string>
    <string name="action_add_to_main">添加到主屏</string>
    <string name="action_property">属性</string>
    <string name="action_remove">删除</string>
    <string name="sort_by_abc">按字母排序</string>
    <string name="action_more">更多</string>
    <string name="acntion_share">分享</string>
    <string name="menu_pate">粘贴</string>
</resources>
